--- a/ml5/index1.html
+++ b/ml5/index1.html
@@ -33,18 +33,18 @@
     <body>
         <ul>
             <li><a class="active" href="index.html">Bird1</a></li>
-            <li><a class="active" href="index1.html">Bird2</a></li> 
-            <li><a class="active" href="index2.html">Car</a></li>  
+            <li><a class="active" href="index1.html">Bird2</a></li>  
+            <li><a class="active" href="index2.html">Car</a></li> 
         </ul>
        <h1>Image classification using MobileNet</h1>
        <p>The MobileNet model labeled this as
           <mark><b><span id="result">...</span></b></mark> with a confidence of
            <mark><b><span id="probability">...</span></b></mark></p>           
-           <img src="https://i.imgur.com/9FOs0O9.jpg" crossorigin="anonymous" id="image" width="350" height="350">
+           <img src='https://i.imgur.com/09Z4NFm.jpg' crossorigin="anonymous" id="image1" width="350" height="350">
 
            <script>
                // The image we want to classify
-               const image = document.getElementById('image');
+               const image = document.getElementById('image1');
                // The result tag in the HTML
                const result = document.getElementById('result');
                // The probability tag in the HTML
