--- a/ml5/index1.html
+++ b/ml5/index1.html
@@ -33,8 +33,10 @@
     <body>
         <ul>
             <li><a class="active" href="index.html">Bird1</a></li>
-            <li><a class="active" href="index1.html">Bird2</a></li>  
+            <li><a class="active" href="index1.html">Bird2</a></li> 
             <li><a class="active" href="index2.html">Car</a></li> 
+            <li><a class="active" href="index3.html">Food</a></li>
+            <li><a class="active" href="index4.html">Liquor</a></li> 
         </ul>
        <h1>Image classification using MobileNet</h1>
        <p>The MobileNet model labeled this as
